--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "better-scroll": "^1.13.2",
+    "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.4.9",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "create-keyframe-animation": "^0.1.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -43,6 +45,7 @@
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^4.0.6",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
