--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@edu/app-progressBar": "^1.0.1",
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "better-scroll": "^1.13.2",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.1.0",
     "js-base64": "^2.4.9",
     "jsonp": "^0.2.1",
     "lyric-parser": "^1.0.1",
